Implement add comments functionality
